fix alignment of dropdown menu with search toggle (#837)
* fix aligment of dropdown menu with search togglr

* remove textfield padding

* fix margin

--- a/src/business/TextField/TextField.pcss
+++ b/src/business/TextField/TextField.pcss
@@ -1,6 +1,5 @@
 .telia-textfield {
   position: relative;
-  padding-bottom: 1.125rem;
   input {
     flex-grow: 1;
     padding: 0.625rem;
@@ -79,7 +78,7 @@
 
 .telia-textfield-helptext {
   color: var(--grey-500);
-  position: absolute;
+  display: block;
 }
 
 .telia-textfield__focus {
